--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -3,6 +3,7 @@
   "Reports": "Reports",
   "Detailed Reports": "Reports With Details",
   "General Reports": "General Reports",
+  "Receivables Report": "Receivables Report",
   "Work Details": "Work Details",
   "I work as a daily wage": "I work as a daily wage",
   "Full Time": "Full Time",
@@ -50,11 +51,13 @@
   "email": "Email",
   "role": "Role",
   "department": "Department",
+  "phone": "Phone",
   "position": "Position",
   "startDate": "Start Date",
   "total": "Total Salary",
   "received": "Received Salary",
   "remaining": "Remaining Salary",
+  "Users List": "Users List",
   "used": "Used Leave Days",
   "hasCheckedIn": "Checked In",
   "checkInTime": "Check-In Time",
@@ -70,8 +73,9 @@
   "checkIn": "Check In",
   "checkOut": "Check Out",
   "Rejected": "Rejected",
-  "Pending": "Pending",
-  "Approved": "Approved",
+  "Active": "Active",
+  "Inactive": "Inactive",
+  "Verified": "Verified",
   "New Request": "New Request",
   "leaveNewRequest": "Leave New Request",
   "salaryNewRequest": "Salary New Request",
@@ -95,5 +99,55 @@
   "Normal": "Normal",
   "Master": "Master",
   "Worker": "Worker",
-  "Choose Date": "Choose Date"
+  "Choose Date": "Choose Date",
+  "amount": "Amount",
+  "Cash": "Cash",
+  "Bank Transfer": "Bank Transfer",
+  "Check": "Check",
+  "Last Transaction": "Last Transaction",
+  "status": "Status",
+  "Add Layout": "Add Layout",
+  "edit": "Edit",
+  "Project Manager": "Project Manager",
+  "Project Director": "Project Director",
+  "Site Supervisor": "Site Supervisor",
+  "Daily Site Supervisor": "Daily Site Supervisor",
+  "Civil Engineer": "Civil Engineer",
+  "Construction Engineer": "Construction Engineer",
+  "Architect": "Architect",
+  "Building Designer": "Building Designer",
+  "Foreman": "Foreman",
+  "Workforce Manager": "Workforce Manager",
+  "Electrician": "Electrician",
+  "Electrical Installer": "Electrical Installer",
+  "Plumber": "Plumber",
+  "Pipe and Sewage Installer": "Pipe and Sewage Installer",
+  "Mason": "Mason",
+  "Construction Worker": "Construction Worker",
+  "Safety Officer": "Safety Officer",
+  "Safety Inspector": "Safety Inspector",
+  "General Laborer": "General Laborer",
+  "General Worker": "General Worker",
+  "Mechanical Technician": "Mechanical Technician",
+  "Equipment Installer": "Equipment Installer",
+  "Fabrication Technician": "Fabrication Technician",
+  "Material Fabricator": "Material Fabricator",
+  "Project Management Technician": "Project Management Technician",
+  "Project Assistant": "Project Assistant",
+  "Painter": "Painter",
+  "Painting Contractor": "Painting Contractor",
+  "Tiler": "Tiler",
+  "Tile Installer": "Tile Installer",
+  "Concrete Finisher": "Concrete Finisher",
+  "Concrete Worker": "Concrete Worker",
+  "Ground Services": "Ground Services",
+  "Ground Preparation": "Ground Preparation",
+  "Consulting Technician": "Consulting Technician",
+  "Technical Consultant": "Technical Consultant",
+  "Estimator": "Estimator",
+  "Cost Estimator": "Cost Estimator",
+  "Quality Manager": "Quality Manager",
+  "Quality Supervisor": "Quality Supervisor",
+  "add": "Add",
+  "search": "Search"
 }
