--- a/public/locales/fa.json
+++ b/public/locales/fa.json
@@ -3,6 +3,7 @@
   "Reports": "گزارشات",
   "Detailed Reports": "گزارش با جزئیات",
   "General Reports": " گزارش کلی",
+  "Receivables Report": "گزارش دریافتی",
   "Work Details": "جزئیات کار",
   "I work as a daily wage": "امروز روزمرد بودم",
   "Full Time": "تمام وقت",
@@ -23,10 +24,12 @@
   "Financial Management": "مدیریت مالی",
   "Salaries Paid": "حقوق پرداخت‌شده",
   "Edit Salaries": "ویرایش حقوق",
+  "Users List": "لیست کاربران",
   "Reports & Analytics": "گزارشات و تحلیل‌ها",
   "Working Hours Report": "گزارش ساعات کاری",
   "Leave Reports": "گزارش مرخصی‌ها",
   "System Settings": "مدیریت تنظیمات سیستم",
+  "phone": "شماره تلفن",
   "Working Hours Rules": "قوانین ساعات کاری",
   "Leave Rules": "قوانین مرخصی",
   "Financial Settings": "تنظیمات مالی",
@@ -70,7 +73,9 @@
   "checkOut": "خروج",
   "Rejected": "رد شده",
   "Pending": "در حال بررسی",
-  "Approved": "تایید شده",
+  "Active": "فعال",
+  "Inactive": "غیر فعال",
+  "Verified": "تایید شده",
   "New Request": "درخواست جدید",
   "leaveNewRequest": "درخواست مرخصی جدید",
   "leaveRequest": "درخواست مرخصی",
@@ -96,5 +101,55 @@
   "Normal": "عادی",
   "Master": "استاد",
   "Worker": "کارگر",
-  "Choose Date": "انتخاب تاریخ"
+  "Choose Date": "انتخاب تاریخ",
+  "amount": "مبلغ",
+  "Cash": "نقد",
+  "Bank Transfer": "انتقال بانکی",
+  "Check": "چک",
+  "Last Transaction": "آخرین تراکنش ها",
+  "status": "وضعیت",
+  "Add Layout": "افزودن لایه",
+  "edit": "ویرایش",
+  "Project Manager": "مدیر پروژه",
+  "Project Director": "مدیر کل پروژه",
+  "Site Supervisor": "سرپرست کارگاه",
+  "Daily Site Supervisor": "سرپرست روزانه سایت",
+  "Civil Engineer": "مهندس عمران",
+  "Construction Engineer": "مهندس ساخت و ساز",
+  "Architect": "معمار",
+  "Building Designer": "طراح ساختمان",
+  "Foreman": "سرکارگر",
+  "Workforce Manager": "مدیر نیروی کار",
+  "Electrician": "برقکار",
+  "Electrical Installer": "نصب و تعمیر الکتریسیته",
+  "Plumber": "لوله‌کش",
+  "Pipe and Sewage Installer": "نصب لوله و سیستم‌های فاضلاب",
+  "Mason": "استاد بنا",
+  "Construction Worker": "کارگر ساختمانی",
+  "Safety Officer": "افسر ایمنی",
+  "Safety Inspector": "نظارت بر ایمنی",
+  "General Laborer": "کارگر ساده",
+  "General Worker": "نیروی عمومی",
+  "Mechanical Technician": "تکنسین مکانیک",
+  "Equipment Installer": "نصب و نگهداری تجهیزات",
+  "Fabrication Technician": "تکنسین ساخت",
+  "Material Fabricator": "ساخت مصالح",
+  "Project Management Technician": "تکنسین مدیریت پروژه",
+  "Project Assistant": "کمک به مدیر پروژه",
+  "Painter": "نقاش",
+  "Painting Contractor": "اجرای نقاشی",
+  "Tiler": "کاشی‌کار",
+  "Tile Installer": "نصب کاشی",
+  "Concrete Finisher": "مجری کارهای بتن",
+  "Concrete Worker": "کار با بتن",
+  "Ground Services": "خدمات زمین",
+  "Ground Preparation": "آماده‌سازی زمین",
+  "Consulting Technician": "تکنسین مشاوره",
+  "Technical Consultant": "مشاوره فنی",
+  "Estimator": "کارشناس ارزیابی",
+  "Cost Estimator": "ارزیابی هزینه‌ها",
+  "Quality Manager": "مدیر کیفیت",
+  "Quality Supervisor": "نظارت بر کیفیت",
+  "add": "اضافه کردن",
+  "search": "جستجو"
 }
