complete managing users

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -21,6 +21,7 @@
   "Leave Requests": "Leave Requests",
   "Salary Requests": "Salary Requests",
   "Attendance Reports": "Attendance Reports",
+  "Attendance Requests": "Attendance Requests",
   "Financial Management": "Financial Management",
   "Salaries Paid": "Salaries Paid",
   "Edit Salaries": "Edit Salaries",
@@ -106,48 +107,16 @@
   "Check": "Check",
   "Last Transaction": "Last Transaction",
   "status": "Status",
+  "isUserActive": "Is User Active?",
   "Add Layout": "Add Layout",
   "edit": "Edit",
-  "Project Manager": "Project Manager",
-  "Project Director": "Project Director",
-  "Site Supervisor": "Site Supervisor",
-  "Daily Site Supervisor": "Daily Site Supervisor",
-  "Civil Engineer": "Civil Engineer",
-  "Construction Engineer": "Construction Engineer",
-  "Architect": "Architect",
-  "Building Designer": "Building Designer",
-  "Foreman": "Foreman",
-  "Workforce Manager": "Workforce Manager",
-  "Electrician": "Electrician",
-  "Electrical Installer": "Electrical Installer",
-  "Plumber": "Plumber",
-  "Pipe and Sewage Installer": "Pipe and Sewage Installer",
   "Mason": "Mason",
-  "Construction Worker": "Construction Worker",
-  "Safety Officer": "Safety Officer",
-  "Safety Inspector": "Safety Inspector",
   "General Laborer": "General Laborer",
-  "General Worker": "General Worker",
-  "Mechanical Technician": "Mechanical Technician",
-  "Equipment Installer": "Equipment Installer",
-  "Fabrication Technician": "Fabrication Technician",
-  "Material Fabricator": "Material Fabricator",
-  "Project Management Technician": "Project Management Technician",
-  "Project Assistant": "Project Assistant",
-  "Painter": "Painter",
-  "Painting Contractor": "Painting Contractor",
-  "Tiler": "Tiler",
-  "Tile Installer": "Tile Installer",
-  "Concrete Finisher": "Concrete Finisher",
-  "Concrete Worker": "Concrete Worker",
-  "Ground Services": "Ground Services",
-  "Ground Preparation": "Ground Preparation",
-  "Consulting Technician": "Consulting Technician",
-  "Technical Consultant": "Technical Consultant",
-  "Estimator": "Estimator",
-  "Cost Estimator": "Cost Estimator",
-  "Quality Manager": "Quality Manager",
-  "Quality Supervisor": "Quality Supervisor",
   "add": "Add",
-  "search": "Search"
+  "search": "Search",
+  "Super Admin": "Super Admin",
+  "Admin": "Admin",
+  "User": "User",
+  "saveAndAddAnother": "Save and Add Another",
+  "saveAndClose": "Save and Close"
 }
