--- a/public/locales/fa.json
+++ b/public/locales/fa.json
@@ -21,6 +21,7 @@
   "Leave Requests": "درخواست‌های مرخصی",
   "Salary Requests": "درخواست‌های حقوق",
   "Attendance Reports": "گزارش ورود و خروج",
+  "Attendance Requests": "درخواست های ورود و خروج",
   "Financial Management": "مدیریت مالی",
   "Salaries Paid": "حقوق پرداخت‌شده",
   "Edit Salaries": "ویرایش حقوق",
@@ -108,48 +109,16 @@
   "Check": "چک",
   "Last Transaction": "آخرین تراکنش ها",
   "status": "وضعیت",
+  "isUserActive": "آیا کاربر فعال است؟",
   "Add Layout": "افزودن لایه",
   "edit": "ویرایش",
-  "Project Manager": "مدیر پروژه",
-  "Project Director": "مدیر کل پروژه",
-  "Site Supervisor": "سرپرست کارگاه",
-  "Daily Site Supervisor": "سرپرست روزانه سایت",
-  "Civil Engineer": "مهندس عمران",
-  "Construction Engineer": "مهندس ساخت و ساز",
-  "Architect": "معمار",
-  "Building Designer": "طراح ساختمان",
-  "Foreman": "سرکارگر",
-  "Workforce Manager": "مدیر نیروی کار",
-  "Electrician": "برقکار",
-  "Electrical Installer": "نصب و تعمیر الکتریسیته",
-  "Plumber": "لوله‌کش",
-  "Pipe and Sewage Installer": "نصب لوله و سیستم‌های فاضلاب",
   "Mason": "استاد بنا",
-  "Construction Worker": "کارگر ساختمانی",
-  "Safety Officer": "افسر ایمنی",
-  "Safety Inspector": "نظارت بر ایمنی",
   "General Laborer": "کارگر ساده",
-  "General Worker": "نیروی عمومی",
-  "Mechanical Technician": "تکنسین مکانیک",
-  "Equipment Installer": "نصب و نگهداری تجهیزات",
-  "Fabrication Technician": "تکنسین ساخت",
-  "Material Fabricator": "ساخت مصالح",
-  "Project Management Technician": "تکنسین مدیریت پروژه",
-  "Project Assistant": "کمک به مدیر پروژه",
-  "Painter": "نقاش",
-  "Painting Contractor": "اجرای نقاشی",
-  "Tiler": "کاشی‌کار",
-  "Tile Installer": "نصب کاشی",
-  "Concrete Finisher": "مجری کارهای بتن",
-  "Concrete Worker": "کار با بتن",
-  "Ground Services": "خدمات زمین",
-  "Ground Preparation": "آماده‌سازی زمین",
-  "Consulting Technician": "تکنسین مشاوره",
-  "Technical Consultant": "مشاوره فنی",
-  "Estimator": "کارشناس ارزیابی",
-  "Cost Estimator": "ارزیابی هزینه‌ها",
-  "Quality Manager": "مدیر کیفیت",
-  "Quality Supervisor": "نظارت بر کیفیت",
   "add": "اضافه کردن",
-  "search": "جستجو"
+  "search": "جستجو",
+  "Super Admin": "مدیر عالی",
+  "Admin": "مدیر",
+  "User": "کاربر",
+  "saveAndAddAnother": "ذخیره و اضافه کردن مجدد",
+  "saveAndClose": "ذخیره و بستن"
 }
