--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -55,6 +55,7 @@
   "phone": "Phone",
   "position": "Position",
   "startDate": "Start Date",
+  "createdDate": "Created Date",
   "total": "Total Salary",
   "received": "Received Salary",
   "remaining": "Remaining Salary",
@@ -77,12 +78,16 @@
   "Active": "Active",
   "Inactive": "Inactive",
   "Verified": "Verified",
+  "approve": "Approve",
+  "reject": "Reject",
   "New Request": "New Request",
   "leaveNewRequest": "Leave New Request",
+  "Respond to Request": "Respond to Request",
   "salaryNewRequest": "Salary New Request",
   "title": "Title",
   "detail": "Detail",
   "save": "Save",
+  "submit": "Submit",
   "cancel": "Cancel",
   "from": "From Date",
   "to": "To Date",
@@ -118,5 +123,9 @@
   "Admin": "Admin",
   "User": "User",
   "saveAndAddAnother": "Save and Add Another",
-  "saveAndClose": "Save and Close"
+  "saveAndClose": "Save and Close",
+  "reviewDate": "Review Date",
+  "details": "Details",
+  "All": "All",
+  "relpy": "Reply"
 }
