--- a/public/locales/fa.json
+++ b/public/locales/fa.json
@@ -56,6 +56,7 @@
   "department": "دپارتمان",
   "position": "سمت",
   "startDate": "تاریخ شروع",
+  "createdDate": "تاریخ ایجاد",
   "total": "حقوق کل",
   "received": "حقوق دریافتی",
   "remaining": "حقوق باقی‌مانده",
@@ -77,14 +78,18 @@
   "Active": "فعال",
   "Inactive": "غیر فعال",
   "Verified": "تایید شده",
+  "approve": "تایید کردن",
+  "reject": "رد کردن",
   "New Request": "درخواست جدید",
   "leaveNewRequest": "درخواست مرخصی جدید",
+  "Respond to Request": "پاسخ به درخواست",
   "leaveRequest": "درخواست مرخصی",
   "salaryNewRequest": "درخواست حقوق جدید",
   "salaryRequest": "درخواست حقوق",
   "title": "موضوع",
   "detail": "جزئیات",
   "save": "ذخیره",
+  "submit": "ارسال",
   "cancel": "انصراف",
   "from": "از تاریخ",
   "to": "تا تاریخ",
@@ -120,5 +125,9 @@
   "Admin": "مدیر",
   "User": "کاربر",
   "saveAndAddAnother": "ذخیره و اضافه کردن مجدد",
-  "saveAndClose": "ذخیره و بستن"
+  "saveAndClose": "ذخیره و بستن",
+  "reviewDate": "تاریخ بررسی",
+  "details": "جزئیات",
+  "All": "همه",
+  "reply": "پاسخ دادن"
 }
